--- a/src/container/product-edit/index.hbs
+++ b/src/container/product-edit/index.hbs
@@ -5,8 +5,8 @@
 
 <main class='main'>
   <div class='form'>
-    <h1 class='form__title'>Створення товару</h1>
-    <form method='POST' action='/product-create'>
+    <h1 class='form__title'>Редагування товару</h1>
+    <form method='POST' action='/product-edit'>
 
       <div class='form__content'>
         <h2 class='form__info_title'>Інформація про товар</h2>
@@ -17,7 +17,14 @@
             <div class='form_field'>
               <label class='form__label'>Назва товару
               </label>
-              <input name='name' class='form__input' />
+              <input
+                type='text'
+                id='name'
+                name='name'
+                class='form__input'
+                value='{{product.name}}'
+                required
+              />
             </div>
           </div>
 
@@ -27,8 +34,26 @@
               </label>
               <input
                 type='number'
+                id='price'
                 name='price'
                 class='form__input'
+                value='{{product.price}}'
+                required
+              />
+            </div>
+          </div>
+
+          <div class='form_field_position'>
+            <div class='form_field'>
+              <label class='form__label'>ID
+              </label>
+              <input
+                type='number'
+                id='id'
+                name='id'
+                class='form__input'
+                value='{{product.id}}'
+                required
               />
             </div>
           </div>
@@ -39,8 +64,12 @@
                 товару
               </label>
               <input
+                type='text'
+                id='description'
                 name='description'
                 class='form__input'
+                value='{{product.description}}'
+                required
               />
               <p class='form__info'>Відображається в картці
                 товару</p>
@@ -49,7 +78,14 @@
 
         </div>
 
-        <button class='form__button'>Створити товар</button>
+        <div class='form__2buttons'>
+          <button class='form__button'>Зберегти оновлення</button>
+          <a
+            href='/product-delete?id={{product.id}}'
+            class='form__button__red'
+          >Видалити товар</a>
+        </div>
+
       </div>
     </form>
   </div>
