--- a/src/container/product-list/index.hbs
+++ b/src/container/product-list/index.hbs
@@ -17,33 +17,7 @@
         {{else}}
           <div class='product-list'>
 
-            {{#each list}}
-
-              <div class='product-card'>
-                <div>
-                  <p class='product-card-name'>{{name}}</p>
-                  <p
-                    class='product-card-description'
-                  >{{description}}</p>
-                  <span class='product-card-id'>ID:
-                    {{id}}</span>
-                </div>
-
-                <div class='product-card-footer'>
-                  <p
-                    class='product-card-price'
-                  >{{price}}₴</p>
-                  <a
-                    class='product-card-edit'
-                    href='/product-edit?id={{id}}'
-                  >Редагувати</a>
-
-                </div>
-              </div>
-
-            {{/each}}
-
-            {{!-- {{> product-card}}  // Error: The partial product-card could not be found --}}
+            {{> product-card}}
 
           </div>
         {{/if}}
